# love-libretro

./: .gitignore  Makefile  README.md  TODO.txt
freetype-2.5.0.1/builds/unix/: config.status  freetype-config  freetype2.pc  libtool  unix-def.mk
freetype-2.5.0.1/objs/: autofit.lo  bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftexport.sym  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlcdfil.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  ftxf86.lo  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sfnt.lo  smooth.lo  truetype.lo  type1.lo  (+3 more)
freetype-2.5.0.1/objs/.libs/: libfreetype.la  libfreetype.lai
libmodplug-0.8.8.4/: Makefile  config.status  libtool
libmodplug-0.8.8.4/src/: Makefile  config.h
libmodplug-0.8.8.4/src/.deps/: fastmix.Plo  load_669.Plo  load_abc.Plo  load_amf.Plo  load_ams.Plo  load_dbm.Plo  load_dmf.Plo  load_dsm.Plo  load_far.Plo  load_it.Plo  load_j2b.Plo  load_mdl.Plo  load_med.Plo  load_mid.Plo  load_mod.Plo  load_mt2.Plo  load_mtm.Plo  load_okt.Plo  load_pat.Plo  load_psm.Plo  load_ptm.Plo  load_s3m.Plo  load_stm.Plo  load_ult.Plo  load_umx.Plo  load_wav.Plo  load_xm.Plo  mmcmp.Plo  modplug.Plo  snd_dsp.Plo  snd_flt.Plo  snd_fx.Plo  sndfile.Plo  sndmix.Plo
libogg-1.3.1/: Makefile  config.h  config.status  libtool  ogg.pc
libogg-1.3.1/doc/: Makefile
libogg-1.3.1/doc/libogg/: Makefile
libogg-1.3.1/include/: Makefile
libogg-1.3.1/include/ogg/: Makefile
libogg-1.3.1/src/: Makefile
libogg-1.3.1/src/.deps/: bitwise.Plo  framing.Plo  test_bitwise-bitwise.Po  test_framing-framing.Po
libtheora-1.1/autom4te.cache/: traces.0t
love-0.10.2/: Makefile.in  aclocal.m4  config.h.in  configure  configure-modules.ac  configure.ac
love-0.10.2/src/: Makefile.am  Makefile.in
love-6370a05c13c2/src/common/: config.h  delay.cpp
love-6370a05c13c2/src/modules/audio/: wrap_Audio.cpp
love-6370a05c13c2/src/modules/system/: System.cpp
luajit-2.0.3/libretro/mingw_x86/src/: lj_vm.s
luajit-2.0.3/libretro/mingw_x86_64/src/: lj_vm.s
openal-soft-1.16.0/: .gitignore  config.h
